# echoes

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
src/: main.py
src/config/: environment.py
src/controllers/: audio_controller.py
src/core/: audio.py  models.py  processor.py
src/ui/: app.py
src/ui/widgets/: audio_meter.py  processing_progress.py  recording_status.py
tests/: test_main.py
tests/config/: test_environment.py
tests/controllers/: test_audio_controller.py
tests/core/: test_audio.py  test_models.py  test_processor.py
tests/ui/widgets/: test_audio_meter.py  test_processing_progress.py
